--- a/apps/web/src/components/typography/overview.module.scss
+++ b/apps/web/src/components/typography/overview.module.scss
@@ -10,7 +10,7 @@
 
     border-radius: var(--block-border-radius);
 
-    @media (min-width: $breakpoint-mobile-small) {
+    @media (min-width: $breakpoint-mobile) {
         display: grid;
         justify-content: stretch;
         align-items: stretch;
@@ -60,6 +60,12 @@
 }
 
 .content {
+    @media (max-width: $breakpoint-mobile) {
+        h1 {
+            font-size: 1.9em;
+        }
+    }
+
     &.plain {
         width: $breakpoint-tablet;
         max-width: 100%;
