--- a/apps/web/src/app/(shops)/_scss/app.scss
+++ b/apps/web/src/app/(shops)/_scss/app.scss
@@ -36,7 +36,11 @@ body {
     --color-success: #04e762;
 }
 
-input {
+input,
+textarea,
+select {
+    font-family: var(--font-geist-mono, inherit) !important;
+
     &[type='number'] {
         -moz-appearance: textfield !important;
         appearance: textfield;
