--- a/apps/web/src/components/typography/content.module.scss
+++ b/apps/web/src/components/typography/content.module.scss
@@ -49,9 +49,13 @@
         font-weight: 400;
         line-height: 1.3;
 
-        &:last-child {
+        &:is(:last-child, :empty) {
             margin-bottom: 0;
             padding-bottom: 0;
+        }
+
+        &:empty {
+            display: none;
         }
 
         i,
