--- a/apps/web/src/components/header/header.module.scss
+++ b/apps/web/src/components/header/header.module.scss
@@ -5,6 +5,33 @@
     z-index: 10;
     inset: 0 0 auto 0;
 
+    &[data-theme='primary'] {
+        color: var(--color-accent-primary-text);
+
+        &[data-theme-variant='default'] {
+            background: var(--accent-primary);
+        }
+        &[data-theme-variant='light'] {
+            background: var(--accent-primary-light);
+        }
+        &[data-theme-variant='dark'] {
+            background: var(--accent-primary-dark);
+        }
+    }
+    &[data-theme='secondary'] {
+        color: var(--color-accent-secondary-text);
+
+        &[data-theme-variant='default'] {
+            background: var(--accent-secondary);
+        }
+        &[data-theme-variant='light'] {
+            background: var(--accent-secondary-light);
+        }
+        &[data-theme-variant='dark'] {
+            background: var(--accent-secondary-dark);
+        }
+    }
+
     [data-menu-open='true'] & {
         position: fixed;
     }
@@ -13,7 +40,6 @@
 .container {
     display: grid;
     width: 100%;
-    background: var(--accent-secondary-light);
     transition: 150ms ease-in-out background-color;
     border-bottom: var(--block-border-width) solid transparent;
 
@@ -50,6 +76,7 @@
     height: var(--header-height);
     padding: 0 var(--block-padding);
     margin: 0 auto;
+    -webkit-user-select: none;
     user-select: none;
 
     @media (min-width: $breakpoint-header) {
@@ -74,6 +101,7 @@
         border-radius: var(--block-border-radius);
 
         transition: 150ms ease-in-out background-color;
+        -webkit-user-select: none;
         user-select: none;
 
         @media (min-width: $breakpoint-header) {
