--- a/apps/web/src/components/header/header-navigation.module.scss
+++ b/apps/web/src/components/header/header-navigation.module.scss
@@ -1,19 +1,48 @@
 @import '_globals.scss';
 
 .container {
-    display: none;
+    display: flex;
+
+    gap: calc(var(--block-spacer) * 2);
+
+    @media (max-width: $breakpoint-header) {
+        z-index: 5;
+
+        flex-direction: column;
+        flex-grow: 1;
+        position: fixed;
+        inset: 7rem 0 0 -105vw;
+
+        width: 42rem;
+        max-width: 95vw;
+        height: calc(100vh - 7.25rem);
+        height: calc(100dvh - 7.25rem);
+        padding: var(--block-padding) var(--block-padding-large) var(--block-padding-large) var(--block-padding-large);
+
+        background: var(--accent-secondary-light);
+        border-right: var(--block-border-width) solid var(--accent-secondary-dark);
+        color: var(--color-dark);
+        box-shadow: 1rem 1rem 1rem -0.5rem var(--color-block-shadow);
+        transition: 150ms ease-in-out all;
+        overflow-y: scroll;
+
+        font-size: 16px;
+
+        [data-menu-open='true'] & {
+            inset: 7rem 0 0 0;
+        }
+    }
 
     @media (min-width: $breakpoint-header) {
-        display: flex;
         justify-content: flex-start;
         align-items: center;
-        gap: calc(var(--block-spacer) * 2);
         margin-left: var(--block-spacer);
         height: 100%;
+        color: var(--color-dark);
+
         font-weight: 600;
         font-size: 1.65rem;
         text-transform: uppercase;
-        color: var(--color-dark);
 
         &.centered {
             gap: calc(var(--block-spacer-large) * 1.75);
@@ -22,7 +51,10 @@
 
     a {
         cursor: pointer;
-        height: 100%;
+
+        @media (min-width: $breakpoint-header) {
+            height: 100%;
+        }
 
         &:is(:hover, :active, :focus, :focus-within, .active),
         &:hover {
@@ -32,50 +64,79 @@
 
     .item {
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
         gap: var(--block-spacer-small);
-        height: 100%;
         cursor: pointer;
 
+        & > a {
+            font-size: 1.25em;
+            font-weight: 700;
+
+            @media (min-width: $breakpoint-header) {
+                font-size: 1em;
+                font-weight: inherit;
+            }
+        }
+
+        @media (min-width: $breakpoint-header) {
+            flex-direction: row;
+            align-items: center;
+
+            height: 100%;
+        }
+
         svg {
-            display: flex;
+            display: none;
+            flex-direction: row;
             justify-content: center;
             align-items: flex-end;
-            height: 100%;
             margin: 0 -0.25rem -0.15rem 0;
-            font-size: 1.75rem;
+            font-size: 1.75em;
             vertical-align: middle;
             transform: rotate(-90deg);
             transition: 75ms ease-in-out transform;
             text-align: right;
-        }
 
-        &:has(:is(:hover, :active, :focus, :focus-within)),
-        &:is(:hover, :active, :focus, :focus-within),
-        &:hover {
-            color: var(--accent-primary);
+            @media (min-width: $breakpoint-header) {
+                display: flex;
 
-            svg {
-                transform: rotate(0);
-            }
+                height: 100%;
 
-            /* NOTE: DO NOT "@media (hover: hover) and (pointer: fine)" this one! */
-            .submenu {
-                z-index: 1;
-                max-height: 100vh;
-                border-bottom: var(--block-border-width) solid var(--accent-secondary);
+                font-size: 1.75rem;
             }
         }
 
-        // Firefox doesn't support `:is()`, so we have to do this.
-        &:hover .submenu {
-            opacity: 1;
-            max-height: 100vh !important;
+        @media (min-width: $breakpoint-header) {
+            &:has(:is(:hover, :active, :focus, :focus-within)),
+            &:is(:hover, :active, :focus, :focus-within),
+            &:hover {
+                color: var(--accent-primary);
+
+                svg {
+                    transform: rotate(0);
+                }
+
+                /* NOTE: DO NOT "@media (hover: hover) and (pointer: fine)" this one! */
+                .submenu {
+                    z-index: 1;
+                    max-height: 100vh;
+                    border-bottom: var(--block-border-width) solid var(--accent-secondary);
+                }
+            }
+
+            // Firefox doesn't support `:is()`, so we have to do this.
+            &:hover .submenu {
+                opacity: 1;
+                max-height: 100vh !important;
+            }
         }
 
         a {
-            text-transform: uppercase;
+            @media (min-width: $breakpoint-header) {
+                text-transform: uppercase;
+            }
 
             &.top {
                 display: flex;
@@ -88,13 +149,6 @@
         }
 
         .submenu {
-            z-index: -1;
-            overflow: hidden;
-            position: absolute;
-            inset: 5.45rem 0 auto 0;
-
-            max-height: 0;
-            opacity: 0;
             transition:
                 75ms ease-in-out max-height,
                 75ms ease-in-out height,
@@ -105,21 +159,41 @@
             border-bottom: 0 solid transparent;
             background: var(--accent-secondary-light);
             color: var(--color-dark);
-            box-shadow: 0 1rem 1rem -1rem var(--color-block-shadow);
             line-height: normal;
             cursor: unset;
 
+            @media (min-width: $breakpoint-header) {
+                z-index: -1;
+                overflow: hidden;
+                position: absolute;
+                inset: 5.45rem 0 auto 0;
+
+                max-height: 0;
+                opacity: 0;
+                box-shadow: 0 1rem 1rem -1rem var(--color-block-shadow);
+            }
+
             .content {
-                display: grid;
-                grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
                 gap: var(--block-spacer-large);
                 padding: 2rem 2rem 1rem 2rem;
                 max-width: var(--page-width);
                 margin: 0 auto;
 
+                @media (min-width: $breakpoint-header) {
+                    display: grid;
+                    grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+                }
+
                 .subitem {
-                    margin-bottom: var(--block-spacer);
                     transition: 150ms ease-in-out;
+
+                    &:not(:last-child) {
+                        margin-bottom: calc(var(--block-spacer) * 2);
+
+                        @media (min-width: $breakpoint-header) {
+                            margin-bottom: var(--block-spacer);
+                        }
+                    }
 
                     &.active,
                     &:hover {
@@ -127,17 +201,29 @@
                     }
 
                     .title {
-                        font-weight: 500;
-                        line-height: normal;
                         min-height: 2rem;
+
+                        line-height: normal;
+                        font-size: 1.25em;
+                        font-weight: 700;
+
+                        @media (min-width: $breakpoint-header) {
+                            font-size: 1em;
+                            font-weight: 600;
+                        }
                     }
+
                     .description {
                         font-weight: 500;
-                        font-size: 1.25rem;
+                        font-size: 1em;
                         line-height: normal;
                         text-transform: none;
                         opacity: 0.75;
                         margin-top: 0.5rem;
+
+                        @media (min-width: $breakpoint-header) {
+                            font-size: 1.35rem;
+                        }
                     }
                 }
             }
