--- a/apps/web/src/app/(shops)/_components/header.module.scss
+++ b/apps/web/src/app/(shops)/_components/header.module.scss
@@ -11,7 +11,6 @@
 
     width: 100%;
     padding: var(--layout-block-padding) 0;
-    margin-bottom: var(--layout-block-padding);
 
     border-bottom: var(--border-width-half) solid var(--color-background-highlight);
     backdrop-filter: saturate(220%) blur(8px);
@@ -43,7 +42,7 @@
             display: block;
             justify-self: flex-start;
             height: 100%;
-            height: 2rem;
+            height: 4rem;
 
             [data-logo-placement='center'] & {
                 justify-self: flex-start;
@@ -73,7 +72,9 @@
             align-items: center;
             gap: var(--layout-block-padding);
 
-            width: 100%;
+            width: 100vw;
+            margin: 0 calc(var(--layout-page-spacing) * -1);
+            padding: 0.25rem var(--layout-page-spacing);
 
             -webkit-user-select: none;
             user-select: none;
@@ -81,6 +82,10 @@
 
             @media (min-width: $breakpoint-mobile) {
                 justify-content: space-between;
+
+                width: 100%;
+                margin: 0;
+                padding: 0;
             }
 
             .links {
