--- a/apps/admin/src/app/page.module.scss
+++ b/apps/admin/src/app/page.module.scss
@@ -1,7 +1,9 @@
 @import 'globals';
 
 .container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 100vw;
+    grid-template-rows: 100vh;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -12,56 +14,11 @@
     height: 100%;
     margin: 0;
 
+    @media (min-width: $breakpoint-mobile) {
+        align-items: center;
+    }
+
     .content {
-        .shop-selector {
-            display: flex;
-            flex-direction: column;
-            width: 24rem;
-            max-width: 100%;
-            margin: 0 auto;
-            gap: calc(var(--layout-block-padding) / 2);
-
-            .card-header {
-                display: flex;
-                flex-direction: column;
-                gap: calc(var(--layout-block-padding) / 4);
-
-                .logo {
-                    position: relative;
-                    display: block;
-                    justify-self: flex-start;
-                    height: 4rem;
-                    width: 100%;
-
-                    @media (min-width: $breakpoint-mobile) {
-                        height: 2.5rem;
-                    }
-
-                    .image {
-                        height: 100%;
-
-                        -webkit-user-select: none;
-                        user-select: none;
-                        object-fit: contain;
-                        object-position: left center;
-                    }
-                }
-            }
-
-            .actions {
-                display: flex;
-                flex-direction: column;
-                gap: calc(var(--layout-section-spacing) / 2);
-
-                .button {
-                    flex-grow: 1;
-
-                    width: 100%;
-                    padding: var(--layout-block-padding) var(--layout-block-padding-half);
-
-                    font-size: 1em;
-                }
-            }
-        }
+        height: 100%;
     }
 }
