Storefront: Set min-width default value.

--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -175,6 +175,10 @@ input[type='number'] {
     }
 }
 
+* {
+    min-width: 0;
+}
+
 input[type='search']:is(
         ::-webkit-search-decoration,
         ::-webkit-search-cancel-button,
