--- a/apps/admin/src/app/page.module.scss
+++ b/apps/admin/src/app/page.module.scss
@@ -20,5 +20,13 @@
 
     .content {
         height: 100%;
+
+        .header {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            gap: var(--layout-block-padding-half);
+        }
     }
 }
