Storefront: Add MVP pagination to the collection page.
This isn't entirely perfect yet, but it's an extensible base which is a
really good start!

--- a/apps/web/src/app/[domain]/[locale]/collections/[handle]/page.module.scss
+++ b/apps/web/src/app/[domain]/[locale]/collections/[handle]/page.module.scss
@@ -4,4 +4,11 @@
     @media (max-width: $breakpoint-mobile) {
         --component-product-card-width: auto;
     }
+
+    .collection {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: inherit;
+    }
 }
