Storefront: Fix `CollectionPage` padding.

--- a/apps/web/src/app/[domain]/[locale]/collections/[handle]/page.module.scss
+++ b/apps/web/src/app/[domain]/[locale]/collections/[handle]/page.module.scss
@@ -10,5 +10,7 @@
         flex-direction: column;
         align-items: center;
         gap: inherit;
+
+        padding: var(--block-padding-large) 0;
     }
 }
