Storefront: Simplify ProductOptions.

--- a/apps/web/src/components/products/product-actions-container.module.scss
+++ b/apps/web/src/components/products/product-actions-container.module.scss
@@ -21,6 +21,8 @@
     }
 
     .product-options {
+        grid-area: options;
+
         display: flex;
         flex-direction: column;
         gap: var(--block-spacer);
