--- a/apps/admin/src/app/[id]/layout.module.scss
+++ b/apps/admin/src/app/[id]/layout.module.scss
@@ -20,6 +20,11 @@
             flex-direction: column;
             gap: var(--layout-section-padding);
         }
+
+        .section-title {
+            display: flex;
+            gap: calc(var(--layout-block-padding) / 2);
+        }
     }
 }
 
@@ -38,8 +43,33 @@
         gap: var(--layout-block-padding);
         width: 100%;
 
+        &.collaborator {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-width: 0;
+
+            & > div {
+                display: contents;
+            }
+
+            .avatar {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                min-width: 0;
+
+                width: 2rem;
+                height: 2rem;
+                border-radius: 100%;
+
+                background-color: var(--color-background-highlight);
+            }
+        }
+
         &:is(a, button):is(:hover, :active) {
-            .action {
+            .action,
+            label {
                 color: var(--color-accent-primary);
             }
         }
