--- a/apps/admin/src/scss/app.scss
+++ b/apps/admin/src/scss/app.scss
@@ -49,6 +49,10 @@ select {
         -webkit-appearance: none;
         appearance: none;
     }
+
+    &[type='color'] {
+        width: 2rem !important;
+    }
 }
 
 hr {
