--- a/apps/storefront/src/components/Footer/footer.module.scss
+++ b/apps/storefront/src/components/Footer/footer.module.scss
@@ -68,15 +68,18 @@
                     position: relative;
                     display: block;
                     width: 100%;
-                    height: 5rem;
+                    height: 7rem;
                     margin: 0 0 var(--block-padding) 0;
 
                     img {
                         display: block;
                         height: 100%;
                         width: 100%;
+                        min-width: 15rem;
                         object-fit: contain;
                         object-position: left;
+
+                        filter: grayscale(100%) brightness(0) invert(1);
                     }
                 }
 
