Storefront: Remove `tabular-nums` from pricing.

--- a/apps/storefront/src/components/typography/pricing.module.scss
+++ b/apps/storefront/src/components/typography/pricing.module.scss
@@ -1,7 +1,7 @@
 .price {
     color: var(--color-dark);
 
-    font-variant-numeric: tabular-nums;
+    // font-variant-numeric: tabular-nums;
 }
 
 .current {
