Storefront: Improve collection page pagination.
Additionally this slightly improves some pages by adding missing
suspense-boundaries.

--- a/apps/storefront/src/app/[domain]/[locale]/collections/[handle]/page.module.scss
+++ b/apps/storefront/src/app/[domain]/[locale]/collections/[handle]/page.module.scss
@@ -13,4 +13,8 @@
 
         padding: var(--block-padding-large) 0;
     }
+
+    .content {
+        padding-top: var(--block-padding-large);
+    }
 }
