--- a/apps/storefront/src/components/actionable/pagination.module.scss
+++ b/apps/storefront/src/components/actionable/pagination.module.scss
@@ -2,9 +2,19 @@
 
 .container {
     display: flex;
-    flex-wrap: wrap;
-    gap: var(--block-padding-large);
+    flex-wrap: nowrap;
     align-items: center;
+    gap: 0;
+
+    @media (min-width: $breakpoint-mobile) {
+        gap: var(--block-padding-large);
+        flex-wrap: wrap;
+    }
+
+    @media (max-width: $breakpoint-mobile) {
+        overflow-x: scroll;
+        max-width: 100%;
+    }
 
     .item,
     .ellipsis,
@@ -16,12 +26,17 @@
         padding: var(--block-padding);
 
         text-align: center;
-        font-weight: 700;
-        font-size: 0.9em;
+        font-weight: 600;
+        font-size: 0.75em;
 
         -webkit-user-drag: none;
         -webkit-user-select: none;
         user-select: none;
+
+        @media (min-width: $breakpoint-mobile) {
+            font-weight: 700;
+            font-size: 0.9em;
+        }
     }
 
     .action {
@@ -30,13 +45,20 @@
 
     .content {
         display: flex;
-        flex-wrap: wrap;
         gap: var(--block-spacer-small);
         align-items: center;
 
+        @media (min-width: $breakpoint-mobile) {
+            flex-wrap: wrap;
+        }
+
         .item {
             height: 3.5rem;
-            width: 3.5rem;
+            width: 2.75rem;
+
+            @media (min-width: $breakpoint-mobile) {
+                width: 3.5rem;
+            }
 
             border-radius: var(--block-border-width-large);
 
