--- a/apps/storefront/src/slices/common/Collection/collection.module.scss
+++ b/apps/storefront/src/slices/common/Collection/collection.module.scss
@@ -48,11 +48,14 @@
     }
 
     .title {
-        font-size: 1.5em;
-        font-weight: 500;
+        display: flex;
+        align-items: center;
+
+        font-size: 1.25em;
+        font-weight: 600;
 
         @media (min-width: $breakpoint-mobile) {
-            font-size: 2.25rem;
+            font-size: 1.5em;
         }
     }
 
