Storefront: Add wishlist stub and improve suspense boundaries.

--- a/apps/storefront/src/components/products/product-quantity-breaks.module.scss
+++ b/apps/storefront/src/components/products/product-quantity-breaks.module.scss
@@ -5,6 +5,10 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: var(--block-spacer);
 
+    &:empty {
+        display: none;
+    }
+
     .item {
         display: grid;
         grid-template-columns: 1fr auto;
