--- a/apps/storefront/src/components/product-card/product-card.module.scss
+++ b/apps/storefront/src/components/product-card/product-card.module.scss
@@ -59,6 +59,7 @@
         //box-shadow: 0 0 1rem -0.5rem var(--color-block-shadow);
 
         .image {
+            z-index: 0;
             position: absolute;
             height: 100%;
             width: 100%;
@@ -381,5 +382,55 @@
         background: rgba(var(--color-green-rgb), 0.9);
         color: var(--color-bright);
         text-shadow: 0 0 0.25rem var(--color-dark);
+    }
+}
+
+.quick-actions {
+    z-index: 5;
+    position: absolute;
+    inset: 0;
+
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: 100%;
+    padding: calc(var(--block-padding) * 1.25);
+
+    user-select: none;
+    pointer-events: none;
+
+    .action {
+        appearance: none;
+        all: unset;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 3.5rem;
+        height: 3.5rem;
+
+        color: var(--color-block-dark);
+        background: var(--color-block-light);
+        border-radius: 100%;
+
+        transition: $animation-duration ease-in-out all;
+        cursor: pointer;
+        pointer-events: all;
+
+        &:hover,
+        &:active,
+        [data-active] {
+            color: var(--color-dark);
+            background: var(--color-block);
+
+            &[data-type='wishlist'] {
+                background: var(--color-sale);
+
+                &,
+                & svg {
+                    color: var(--color-bright);
+                }
+            }
+        }
     }
 }
