--- a/apps/storefront/src/components/layout/tabs.module.scss
+++ b/apps/storefront/src/components/layout/tabs.module.scss
@@ -3,11 +3,6 @@
 .tabs {
     width: 100%;
     height: 100%;
-    padding: var(--block-padding-large) 0 0 0;
-
-    @media (min-width: $breakpoint-mobile) {
-        padding: 0;
-    }
 
     &:after {
         content: '';
@@ -23,25 +18,25 @@
         display: block;
         float: left;
 
-        margin: 0 var(--block-spacer-large) calc(var(--block-border-width) * -1) 0;
-        padding: 0 0 calc(var(--block-spacer-small) / 2) 0;
+        margin: 0 var(--block-spacer-large) 0 0;
+        padding-bottom: calc(var(--block-spacer-small) / 2);
 
         border-bottom: var(--block-border-width) solid transparent;
         color: var(--color-block-dark);
 
-        text-transform: capitalize;
-        font-size: 1em;
-        font-weight: 500;
+        text-transform: uppercase;
+        font-size: 0.85em;
+        font-weight: 700;
 
         cursor: pointer;
         transition: $animation-duration ease-in-out;
+        user-select: none;
     }
 
-    input:checked + .label {
-        color: var(--color-dark);
-        border-color: var(--color-block-black);
-
-        font-weight: 600;
+    input:checked + .label,
+    .label:hover {
+        color: var(--accent-primary);
+        border-color: var(--accent-primary);
     }
 }
 
@@ -51,11 +46,5 @@
     gap: var(--block-spacer-large);
 
     width: 100%;
-    padding-top: calc(var(--block-padding-large) * 1.5);
-
-    border-top: var(--block-border-width) solid var(--color-block);
-
-    @media (min-width: $breakpoint-mobile) {
-        padding-top: calc(var(--block-padding-large) * 2);
-    }
+    padding-top: var(--block-padding-large);
 }
