--- a/apps/storefront/src/components/products/product-actions-container.module.scss
+++ b/apps/storefront/src/components/products/product-actions-container.module.scss
@@ -6,12 +6,6 @@
     gap: var(--block-spacer);
     height: 100%;
 
-    @media (max-width: $breakpoint-mobile) {
-        [data-options='1'] {
-            display: none;
-        }
-    }
-
     @media (min-width: $breakpoint-mobile) {
         display: grid;
         grid-template-areas: 'quantity-label options' 'quantity options' '. options';
@@ -26,6 +20,12 @@
         display: flex;
         flex-direction: column;
         gap: var(--block-spacer);
+
+        @media (max-width: $breakpoint-mobile) {
+            &:has([data-options='1']) {
+                display: none;
+            }
+        }
 
         @media (min-width: $breakpoint-mobile) {
             gap: calc(var(--block-spacer-small) / 2) var(--block-spacer-large);
